--- a/.gitignore
+++ b/.gitignore
@@ -80,3 +80,4 @@ fmod_editor.log
 Assets/Plugins/FMOD/Cache/Editor/FMODStudioCache.asset
 fmod_editor.log
 Assets/Plugins/FMOD/Cache/Editor/FMODStudioCache.asset
+*.log
